--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.5.1",
+    "@reduxjs/toolkit": "^1.5.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.0",
     "clsx": "^1.0.4",
     "customize-cra": "^0.9.1",
@@ -17,8 +18,11 @@
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.1.2",
     "typescript": "~3.7.2",
     "universal-cookie": "^4.0.2",
     "webpack-bundle-analyzer": "^3.6.0"
